Add Autoprefixer vendors kit to hover mixin

--- a/css/project.css
+++ b/css/project.css
@@ -1,3 +1,9 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
 *,
 *::after,
 *::before {
@@ -38,7 +44,11 @@ body {
     color: #111; }
   .navigation__links li:hover {
     color: #4a4ff2;
+    -webkit-transform: scale(1.2);
+    -ms-transform: scale(1.2);
     transform: scale(1.2);
+    -webkit-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
     curser: pointer;
     border-bottom: 0.2rem solid #4a4ff2; }
@@ -135,7 +145,11 @@ body {
     color: #111; }
   .footer__links li:hover {
     color: #4a4ff2;
+    -webkit-transform: scale(1.2);
+    -ms-transform: scale(1.2);
     transform: scale(1.2);
+    -webkit-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
     curser: pointer;
     border-bottom: 0.2rem solid #4a4ff2; }
