--- a/css/project.css
+++ b/css/project.css
@@ -50,7 +50,7 @@ body {
     -webkit-transition: all 0.2s ease-in-out;
     -o-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
-    curser: pointer;
+    cursor: pointer;
     border-bottom: 0.2rem solid #4a4ff2; }
 
 .header__box {
@@ -151,7 +151,7 @@ body {
     -webkit-transition: all 0.2s ease-in-out;
     -o-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
-    curser: pointer;
+    cursor: pointer;
     border-bottom: 0.2rem solid #4a4ff2; }
 
 .social-links {
