--- a/css/contact.css
+++ b/css/contact.css
@@ -50,7 +50,7 @@ body {
     -webkit-transition: all 0.2s ease-in-out;
     -o-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
-    curser: pointer;
+    cursor: pointer;
     border-bottom: 0.2rem solid #4a4ff2; }
 
 .header__box {
@@ -109,6 +109,7 @@ body {
     background-color: #4a4ff2;
     text-align: center;
     border: none;
+    cursor: pointer;
     margin-top: 3rem; }
     .form__container-btn:hover {
       color: #4a4ff2;
@@ -118,7 +119,7 @@ body {
       -webkit-transition: all 0.2s ease-in-out;
       -o-transition: all 0.2s ease-in-out;
       transition: all 0.2s ease-in-out;
-      curser: pointer;
+      cursor: pointer;
       color: #fff; }
 
 .img-box {
@@ -157,7 +158,7 @@ body {
     -webkit-transition: all 0.2s ease-in-out;
     -o-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
-    curser: pointer;
+    cursor: pointer;
     border-bottom: 0.2rem solid #4a4ff2; }
 
 .social-links {
