Add grid system and images

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -74,7 +74,85 @@ body {
 
 // Image gallery
 .gallery {
-  height: 40rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(32, 1fr);
+  grid-column-gap: 23px;
+  grid-row-gap: 20px;
+  margin-top: 2rem;
+
+  &__img1 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 8;
+  }
+  &__img2 {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 7;
+  }
+  &__img3 {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 11;
+  }
+  &__img4 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 8;
+    grid-row-end: 16;
+  }
+  &__img5 {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 7;
+    grid-row-end: 14;
+  }
+  &__img6 {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 11;
+    grid-row-end: 18;
+  }
+  &__img7 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 16;
+    grid-row-end: 26;
+  }
+  &__img8 {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 14;
+    grid-row-end: 26;
+  }
+  &__img9 {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 18;
+    grid-row-end: 30;
+  }
+  &__img10 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 24;
+    grid-row-end: 34;
+  }
+  &__img11 {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 23;
+    grid-row-end: 34;
+  }
+  &__img12 {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 27;
+    grid-row-end: 34;
+  }
 }
 
 // Sub heading
