--- a/css/index.css
+++ b/css/index.css
@@ -425,7 +425,72 @@ body {
       margin-bottom: 0.9rem; }
 
 .gallery {
-  height: 40rem; }
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(32, 1fr);
+  grid-column-gap: 23px;
+  grid-row-gap: 20px;
+  margin-top: 2rem; }
+  .gallery__img1 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 8; }
+  .gallery__img2 {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 7; }
+  .gallery__img3 {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 11; }
+  .gallery__img4 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 8;
+    grid-row-end: 16; }
+  .gallery__img5 {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 7;
+    grid-row-end: 14; }
+  .gallery__img6 {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 11;
+    grid-row-end: 18; }
+  .gallery__img7 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 16;
+    grid-row-end: 26; }
+  .gallery__img8 {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 14;
+    grid-row-end: 26; }
+  .gallery__img9 {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 18;
+    grid-row-end: 30; }
+  .gallery__img10 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 24;
+    grid-row-end: 34; }
+  .gallery__img11 {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 23;
+    grid-row-end: 34; }
+  .gallery__img12 {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 27;
+    grid-row-end: 34; }
 
 .sub__container {
   width: 100%;
