--- a/css/index.css
+++ b/css/index.css
@@ -63,7 +63,8 @@ body {
   display: flex;
   margin-top: 3rem;
   justify-content: space-between;
-  margin-top: 0; }
+  margin-top: 0;
+  height: 40rem; }
   .header__box-primary {
     font-size: 4rem;
     font-weight: 700;
@@ -401,7 +402,8 @@ body {
 .header__box {
   display: flex;
   margin-top: 3rem;
-  justify-content: space-between; }
+  justify-content: space-between;
+  height: 30rem; }
   .header__box-primary {
     font-size: 4rem;
     font-weight: 700;
@@ -413,6 +415,7 @@ body {
     line-height: 2.3rem;
     mix-blend-mode: normal;
     opacity: 0.6;
+    height: 15rem;
     font-style: italic;
     width: 30rem;
     align-self: flex-end;
