--- a/css/project.css
+++ b/css/project.css
@@ -57,7 +57,8 @@ body {
   display: flex;
   margin-top: 3rem;
   justify-content: space-between;
-  margin-top: 0; }
+  margin-top: 0;
+  height: 40rem; }
   .header__box-primary {
     font-size: 4rem;
     font-weight: 700;
