--- a/css/contact.css
+++ b/css/contact.css
@@ -1,168 +1,2 @@
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v7.0.29,
-* Autoprefixer: v9.7.6
-* Browsers: last 4 version
-*/
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit; }
-
-html {
-  font-size: 62.5%; }
-
-body {
-  box-sizing: border-box;
-  font-family: "Mulish", sans-serif;
-  color: #111;
-  width: 85%;
-  height: auto;
-  margin: auto; }
-
-.navigation {
-  width: 100%;
-  display: flex; }
-
-.navigation__links {
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  list-style-type: none; }
-  .navigation__links a:link {
-    text-decoration: none;
-    font-size: 1.8rem;
-    font-weight: 700;
-    color: #111; }
-  .navigation__links a:nth-child(1) {
-    margin-right: 3rem; }
-  .navigation__links .fab {
-    list-style-type: none;
-    color: #111; }
-  .navigation__links li:hover {
-    color: #4a4ff2;
-    -webkit-transform: scale(1.2);
-    -ms-transform: scale(1.2);
-    transform: scale(1.2);
-    -webkit-transition: all 0.2s ease-in-out;
-    -o-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
-    cursor: pointer;
-    border-bottom: 0.2rem solid #4a4ff2; }
-
-.header__box {
-  display: flex;
-  margin-top: 3rem;
-  justify-content: space-between;
-  margin-top: 0; }
-  .header__box-primary {
-    font-size: 4rem;
-    font-weight: 700;
-    line-height: 6rem;
-    width: 47.5rem; }
-  .header__box-secondary {
-    width: 62rem;
-    height: 35rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly; }
-  .header__box-paragraph {
-    font-size: 1.6rem;
-    font-weight: 400;
-    line-height: 2.6rem;
-    mix-blend-mode: normal;
-    opacity: 0.8;
-    margin-top: 1.4rem;
-    width: 44.5rem; }
-
-.form__container {
-  display: flex;
-  flex-direction: column;
-  width: 47.5rem;
-  height: 29rem;
-  justify-content: space-around; }
-  .form__container-input {
-    padding: 1.8rem;
-    border: none;
-    padding: 1.6rem;
-    mix-blend-mode: normal;
-    opacity: 0.6;
-    border-bottom: 0.1rem solid #979797; }
-    .form__container-input::placeholder {
-      font-weight: 700;
-      font-size: 1.6rem;
-      line-height: 2rem;
-      color: #111;
-      mix-blend-mode: normal;
-      opacity: 0.6; }
-  .form__container-btn {
-    font-weight: 700;
-    font-size: 1.6rem;
-    line-height: 2rem;
-    color: #111;
-    color: #fff;
-    width: 12.5rem;
-    height: 5rem;
-    background-color: #4a4ff2;
-    text-align: center;
-    border: none;
-    cursor: pointer;
-    margin-top: 3rem; }
-    .form__container-btn:hover {
-      color: #4a4ff2;
-      -webkit-transform: scale(1.2);
-      -ms-transform: scale(1.2);
-      transform: scale(1.2);
-      -webkit-transition: all 0.2s ease-in-out;
-      -o-transition: all 0.2s ease-in-out;
-      transition: all 0.2s ease-in-out;
-      cursor: pointer;
-      color: #fff; }
-
-.img-box {
-  display: flex;
-  align-items: center;
-  height: 80rem; }
-
-.img-map {
-  width: 100%; }
-
-.footer {
-  width: 100%;
-  display: flex; }
-
-.footer__links {
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  list-style-type: none; }
-  .footer__links a:link {
-    text-decoration: none;
-    font-size: 1.8rem;
-    font-weight: 700;
-    color: #111; }
-  .footer__links a:nth-child(1) {
-    margin-right: 3rem; }
-  .footer__links .fab {
-    list-style-type: none;
-    color: #111; }
-  .footer__links li:hover {
-    color: #4a4ff2;
-    -webkit-transform: scale(1.2);
-    -ms-transform: scale(1.2);
-    transform: scale(1.2);
-    -webkit-transition: all 0.2s ease-in-out;
-    -o-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
-    cursor: pointer;
-    border-bottom: 0.2rem solid #4a4ff2; }
-
-.social-links {
-  width: fit-content;
-  margin-left: 10%; }
-
+*,*::after,*::before{margin:0;padding:0;box-sizing:inherit}html{font-size:62.5%}body{box-sizing:border-box;font-family:"Mulish", sans-serif;color:#111;width:85%;height:auto;margin:auto}.navigation{width:100%;display:flex}.navigation__links{width:100%;display:flex;justify-content:flex-end;align-items:center;list-style-type:none}.navigation__links a:link{text-decoration:none;font-size:1.8rem;font-weight:700;color:#111}.navigation__links a:nth-child(1){margin-right:3rem}.navigation__links .fab{list-style-type:none;color:#111}.navigation__links li:hover{color:#4a4ff2;-webkit-transform:scale(1.2);-ms-transform:scale(1.2);transform:scale(1.2);-webkit-transition:all 0.2s ease-in-out;-o-transition:all 0.2s ease-in-out;transition:all 0.2s ease-in-out;cursor:pointer;border-bottom:0.2rem solid #4a4ff2}.header__box{display:flex;margin-top:3rem;justify-content:space-between;margin-top:0}.header__box-primary{font-size:4rem;font-weight:700;line-height:6rem;width:47.5rem}.header__box-secondary{width:62rem;height:35rem;display:flex;flex-direction:column;justify-content:space-evenly}.header__box-paragraph{font-size:1.6rem;font-weight:400;line-height:2.6rem;mix-blend-mode:normal;opacity:0.8;margin-top:1.4rem;width:44.5rem}.form__container{display:flex;flex-direction:column;width:47.5rem;height:29rem;justify-content:space-around}.form__container-input{padding:1.8rem;border:none;padding:1.6rem;mix-blend-mode:normal;opacity:0.6;border-bottom:0.1rem solid #979797}.form__container-input::placeholder{font-weight:700;font-size:1.6rem;line-height:2rem;color:#111;mix-blend-mode:normal;opacity:0.6}.form__container-btn{font-weight:700;font-size:1.6rem;line-height:2rem;color:#111;color:#fff;width:12.5rem;height:5rem;background-color:#4a4ff2;text-align:center;border:none;cursor:pointer;margin-top:3rem}.form__container-btn:hover{color:#4a4ff2;-webkit-transform:scale(1.2);-ms-transform:scale(1.2);transform:scale(1.2);-webkit-transition:all 0.2s ease-in-out;-o-transition:all 0.2s ease-in-out;transition:all 0.2s ease-in-out;cursor:pointer;color:#fff}.img-box{display:flex;align-items:center;height:80rem}.img-map{width:100%}.footer{width:100%;display:flex}.footer__links{width:100%;display:flex;justify-content:flex-end;align-items:center;list-style-type:none}.footer__links a:link{text-decoration:none;font-size:1.8rem;font-weight:700;color:#111}.footer__links a:nth-child(1){margin-right:3rem}.footer__links .fab{list-style-type:none;color:#111}.footer__links li:hover{color:#4a4ff2;-webkit-transform:scale(1.2);-ms-transform:scale(1.2);transform:scale(1.2);-webkit-transition:all 0.2s ease-in-out;-o-transition:all 0.2s ease-in-out;transition:all 0.2s ease-in-out;cursor:pointer;border-bottom:0.2rem solid #4a4ff2}.social-links{width:fit-content;margin-left:10%}
 /*# sourceMappingURL=contact.css.map */
