--- a/css/project.css
+++ b/css/project.css
@@ -1,162 +1,2 @@
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v7.0.29,
-* Autoprefixer: v9.7.6
-* Browsers: last 4 version
-*/
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit; }
-
-html {
-  font-size: 62.5%; }
-
-body {
-  box-sizing: border-box;
-  font-family: "Mulish", sans-serif;
-  color: #111;
-  width: 85%;
-  height: auto;
-  margin: auto; }
-
-.navigation {
-  width: 100%;
-  display: flex; }
-
-.navigation__links {
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  list-style-type: none; }
-  .navigation__links a:link {
-    text-decoration: none;
-    font-size: 1.8rem;
-    font-weight: 700;
-    color: #111; }
-  .navigation__links a:nth-child(1) {
-    margin-right: 3rem; }
-  .navigation__links .fab {
-    list-style-type: none;
-    color: #111; }
-  .navigation__links li:hover {
-    color: #4a4ff2;
-    -webkit-transform: scale(1.2);
-    -ms-transform: scale(1.2);
-    transform: scale(1.2);
-    -webkit-transition: all 0.2s ease-in-out;
-    -o-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
-    cursor: pointer;
-    border-bottom: 0.2rem solid #4a4ff2; }
-
-.header__box {
-  display: flex;
-  margin-top: 3rem;
-  justify-content: space-between;
-  margin-top: 0;
-  height: 40rem; }
-  .header__box-primary {
-    font-size: 4rem;
-    font-weight: 700;
-    line-height: 6rem;
-    width: 50rem; }
-  .header__box-secondary {
-    width: 62rem;
-    height: 35rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly; }
-  .header__box-paragraph {
-    font-size: 1.6rem;
-    font-weight: 400;
-    line-height: 2.6rem;
-    mix-blend-mode: normal;
-    opacity: 0.8;
-    width: 63.5rem;
-    margin-top: 2.8rem; }
-
-.header__table-box {
-  display: flex;
-  justify-content: center;
-  width: 50rem;
-  height: 3.5rem; }
-.header__table-td {
-  font-size: 1.8rem;
-  font-weight: 300;
-  line-height: 2.3rem;
-  padding: 1.6rem;
-  mix-blend-mode: normal;
-  opacity: 0.6;
-  border-bottom: 0.1rem solid #979797; }
-
-.bold {
-  font-weight: 700;
-  color: #111; }
-
-.project__hero-image {
-  width: 100%;
-  display: flex;
-  height: 76.6rem;
-  justify-content: center;
-  align-items: center; }
-
-.text__container-paragraph {
-  font-size: 1.6rem;
-  font-weight: 400;
-  line-height: 2.6rem;
-  mix-blend-mode: normal;
-  opacity: 0.8; }
-
-.image__section {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 57.2rem; }
-
-.image__container {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  height: 40rem; }
-
-.footer {
-  width: 100%;
-  display: flex; }
-
-.footer__links {
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  list-style-type: none; }
-  .footer__links a:link {
-    text-decoration: none;
-    font-size: 1.8rem;
-    font-weight: 700;
-    color: #111; }
-  .footer__links a:nth-child(1) {
-    margin-right: 3rem; }
-  .footer__links .fab {
-    list-style-type: none;
-    color: #111; }
-  .footer__links li:hover {
-    color: #4a4ff2;
-    -webkit-transform: scale(1.2);
-    -ms-transform: scale(1.2);
-    transform: scale(1.2);
-    -webkit-transition: all 0.2s ease-in-out;
-    -o-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
-    cursor: pointer;
-    border-bottom: 0.2rem solid #4a4ff2; }
-
-.social-links {
-  width: fit-content;
-  margin-left: 10%; }
-
+*,*::after,*::before{margin:0;padding:0;box-sizing:inherit}html{font-size:62.5%}body{box-sizing:border-box;font-family:"Mulish", sans-serif;color:#111;width:85%;height:auto;margin:auto}.navigation{width:100%;display:flex}.navigation__links{width:100%;display:flex;justify-content:flex-end;align-items:center;list-style-type:none}.navigation__links a:link{text-decoration:none;font-size:1.8rem;font-weight:700;color:#111}.navigation__links a:nth-child(1){margin-right:3rem}.navigation__links .fab{list-style-type:none;color:#111}.navigation__links li:hover{color:#4a4ff2;-webkit-transform:scale(1.2);-ms-transform:scale(1.2);transform:scale(1.2);-webkit-transition:all 0.2s ease-in-out;-o-transition:all 0.2s ease-in-out;transition:all 0.2s ease-in-out;cursor:pointer;border-bottom:0.2rem solid #4a4ff2}.header__box{display:flex;margin-top:3rem;justify-content:space-between;margin-top:0;height:40rem}.header__box-primary{font-size:4rem;font-weight:700;line-height:6rem;width:50rem}.header__box-secondary{width:62rem;height:35rem;display:flex;flex-direction:column;justify-content:space-evenly}.header__box-paragraph{font-size:1.6rem;font-weight:400;line-height:2.6rem;mix-blend-mode:normal;opacity:0.8;width:63.5rem;margin-top:2.8rem}.header__table-box{display:flex;justify-content:center;width:50rem;height:3.5rem}.header__table-td{font-size:1.8rem;font-weight:300;line-height:2.3rem;padding:1.6rem;mix-blend-mode:normal;opacity:0.6;border-bottom:0.1rem solid #979797}.bold{font-weight:700;color:#111}.project__hero-image{width:100%;display:flex;height:76.6rem;justify-content:center;align-items:center}.text__container-paragraph{font-size:1.6rem;font-weight:400;line-height:2.6rem;mix-blend-mode:normal;opacity:0.8}.image__section{width:100%;display:flex;justify-content:center;align-items:center;height:57.2rem}.image__container{width:100%;display:flex;justify-content:space-around;height:40rem}.footer{width:100%;display:flex}.footer__links{width:100%;display:flex;justify-content:flex-end;align-items:center;list-style-type:none}.footer__links a:link{text-decoration:none;font-size:1.8rem;font-weight:700;color:#111}.footer__links a:nth-child(1){margin-right:3rem}.footer__links .fab{list-style-type:none;color:#111}.footer__links li:hover{color:#4a4ff2;-webkit-transform:scale(1.2);-ms-transform:scale(1.2);transform:scale(1.2);-webkit-transition:all 0.2s ease-in-out;-o-transition:all 0.2s ease-in-out;transition:all 0.2s ease-in-out;cursor:pointer;border-bottom:0.2rem solid #4a4ff2}.social-links{width:fit-content;margin-left:10%}
 /*# sourceMappingURL=project.css.map */
