--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -32,7 +32,8 @@
   align-items: center;
   list-style-type: none;
 
-  a:link {
+  a:link,
+  a:visited {
     text-decoration: none;
     font-size: 1.8rem;
     font-weight: $fontBold;
